fix some responsive issues with individual page and change a and p sizes on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -226,6 +226,12 @@ a{
    display: none;
 }
 
+@media (max-width: 727px) {
+   a{
+      font-size: 1.15em;
+   }
+}
+
 /* individual styles ---------------------------------------------- */
 
 #individualPageWrap{
@@ -328,7 +334,7 @@ a{
 
 #insta > img, #linkedin > img{
    width: 30px;
-   margin-top: 10px;
+   margin-top: 12px;
    cursor: pointer;
 }
 
@@ -405,7 +411,14 @@ a{
    }
 }
 
-@media (max-width: 705px) {
+
+@media (max-width: 800px) {
+   #personNavWrap{
+      height: 35vh;
+   }
+}
+
+@media (max-width: 814px) {
    .workWrap{
       height: max-content;
    }
@@ -430,6 +443,22 @@ a{
       width: 50vh;
       max-width: 75%;
    }
+
+   #bio{
+      font-size: 1em;
+      max-width: 85%;
+   }
+
+   #insta > img, #linkedin > img{
+   width: 35px;
+   margin-top: 15px;
+   margin-right: 10px;
+}
+
+   .bio{
+      min-height: 60vw;
+      height: unset!important;
+   }
 }
 
 @media (max-width: 564px) {
@@ -444,10 +473,6 @@ a{
       letter-spacing: -.03em;
    }
 
-   #personNavWrap{
-      height: 35vh;
-   }
-
    .navPreviewImg{
       width: 10vw;
    }
@@ -458,6 +483,18 @@ a{
 
    h2{
       font-size: 1.1rem;
+   }
+
+   .bio{
+      min-height: 75vw;
+      height: unset!important;
+   }
+}
+
+@media (max-width: 375px) {
+
+   .posterLinksWrap{
+      margin-top: -4vh;
    }
 }
 
